Merge Data and Attributes